# CCGTemplate

./: CMakeLists.txt  conanfile.py  prep.sh
src/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_App.cpp
